--- a/public/css/style.css
+++ b/public/css/style.css
@@ -363,6 +363,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
 }
+
 #scrollUp:hover {
   color: white;
   background:black;
@@ -373,6 +374,36 @@ img {
   bottom: 5%;
   opacity: 1;
   visibility: visible;
+}
+
+.back-to-top {
+  position: fixed;
+  visibility: hidden;
+  opacity: 0;
+  right: 15px;
+  bottom: 15px;
+  z-index: 996;
+  background: #FF0000;
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
+  transition: all 0.4s;
+}
+
+.back-to-top i {
+  font-size: 28px;
+  color: #fff;
+  line-height: 0;
+}
+
+.back-to-top:hover {
+  background: #ff774a;
+  color: #fff;
+}
+
+.back-to-top.active {
+  visibility: visible;
+  opacity: 1;
 }
 
 /*--------------------------------------
@@ -1392,6 +1423,11 @@ svg {
 }
 
 .btn-outline-dark:hover {
+  background-color: black;
+  border-color: #b98035;
+}
+
+.btn-outline-darks {
   background-color: black;
   border-color: #b98035;
 }
